<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfoPage">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="224dp"
        android:layout_height="65dp"
        android:text="@string/address_wounderland_24_eilat"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="112dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_eilat_myhotel_com"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="177dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_972_352_633_32"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="206dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/menu1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="579dp" />
</androidx.constraintlayout.widget.ConstraintLayout>