<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chatScreen"
    tools:ignore="ExtraText">


    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:id="@+id/cardView4"-->
    <!--        android:layout_width="409dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:cardBackgroundColor="#FFFFFF"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="1.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/cardView3"-->
    <!--        app:layout_constraintVertical_bias="0.964" />-->

    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/edit_gchat_message"
            android:layout_width="311dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/enter_message"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill" />

<!--        <Button-->
<!--            android:id="@+id/button_gchat_send"-->
<!--            android:layout_width="75dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:text="@string/send"-->
<!--            android:textColor="@color/black" />-->

    </RelativeLayout><![CDATA[
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="16dp">
    ]]>












    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:id="@+id/layout_group_chat"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:fitsSystemWindows="true"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <androidx.appcompat.widget.Toolbar-->
    <!--            android:id="@+id/toolbar_gchannel"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="?attr/actionBarSize"-->
    <!--            android:theme="@style/Widget.AppCompat.Toolbar"-->
    <!--            app:popupTheme="@style/Theme.AppCompat.Light">-->

    <!--        </androidx.appcompat.widget.Toolbar>-->

    <!--        <androidx.cardview.widget.CardView-->
    <!--            android:id="@+id/cardView3"-->
    <!--            android:layout_width="409dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginEnd="2dp"-->
    <!--            android:layout_marginRight="2dp"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/toolbar_gchannel" />-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toStartOf="@+id/currentUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_gchat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_gchat_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="411dp"
        android:layout_height="1dp"
        android:background="#393030"
        app:layout_constraintBottom_toTopOf="@+id/recycler_gchat"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </RelativeLayout>

    <TextView
        android:id="@+id/currentUserName"
        android:layout_width="109dp"
        android:layout_height="24dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="216dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/recycler_gchat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-45dp"
        tools:layout_editor_absoluteY="0dp"
        android:descendantFocusability="blocksDescendants"
        android:visibility="gone"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:src="@drawable/ic_send"
        android:id="@+id/button_gchat_send"
        android:contentDescription="@string/todo1" />

<!--    <ScrollView-->
<!--        android:layout_width="188dp"-->
<!--        android:layout_height="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/recycler_gchat"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/recycler_gchat"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/recycler_gchat">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_alignP/>-->
<!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>